Bug fix for animation on mobile.

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -27,6 +27,10 @@ strong{
   background: linear-gradient(to right, rgba(196, 154, 108, 0) 0, #D2CAC7 15%, #D2CAC7 85%, rgba(196, 154, 108, 0));
 }
 
+#headline1, #headline2, #headline3{
+  opacity: 0;
+}
+
 .chocoImageBanner{
   background: linear-gradient(to right, rgba(196, 154, 108, 0) 0, #c39b7c 25%, #c39b7c 75%, rgba(196, 154, 108, 0));
 }
